# FireworksRouter

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 31a8a6090b31_v2_baseline_single_tenant_admin_per_key_.py  607d7b1376d1_v5_model_price_catalog_table.py  60b0622e1426_v4_api_key_token_encrypted_request_log_.py  642784f0df90_v6_hot_path_composite_indexes_on_.py  8f0d16ab3af7_v3_upstream_key_materialized_sparkline_.py  a1f2e9d7b3c0_v7_system_logs_table.py
app/: config.py  crypto.py  db.py  main.py
app/api/: admin.py  admin_auth.py  admin_logs.py  admin_metrics.py  admin_models.py  admin_price_catalog.py  admin_settings.py  deps.py  system.py
app/gateway/: anthropic.py  errors.py  proxy.py  router.py
app/models/: __init__.py  api_key.py  key_metric_bucket.py  key_model_state.py  model.py  model_price_catalog.py  probe_history.py  request_log.py  system_log.py  system_setting.py  upstream_key.py
app/services/: balance.py  cooldown.py  fireworks.py  known_prices.py  metrics.py  models.py  price_catalog.py  scheduler.py  session.py  settings.py  upstream.py
app/tasks/: scheduler.py
app/utils/: json_schema.py  logger.py  tokens.py
docs/: DEPLOYMENT.md  PRD.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/api/: client.js  index.js
frontend/src/components/: BalanceBar.vue  HealthSignal.vue  KpiCard.vue  (+2 more)
scripts/: Caddyfile  backup.sh  bootstrap.py  deploy.sh  issue_token.py  postgres-init.sql
(+16 files in other folders)
